<resources>
    <string name="app_name">Contacts</string>
    <string name="search_contact">Search Contact</string>
    <string name="new_contact">New Contact</string>
    <string name="title_switch">Switch</string>
    <string name="text_company">Company</string>
    <string name="name">Esteban</string>
    <string name="image_description">"Image "</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="number">Number</string>
    <string name="mail">Mail</string>
    <string name="address">Address</string>
    <string name="type_name">Type a name</string>
    <string name="type_last_name">Last name</string>
    <string name="type_company">Company</string>
    <string name="type_age">Age</string>
    <string name="type_weight">Type weight</string>
    <string name="type_number">Type Number</string>
    <string name="type_mail">Type mail</string>
    <string name="type_address">Type address</string>
</resources>