<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail">

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      app:title="@string/app_name"
      android:elevation="4dp"
      android:background="?attr/colorPrimary"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      app:popupTheme="@style/Theme.AppCompat.Light"
      tools:ignore="MissingConstraints" />

  <TextView
      android:id="@+id/editNumber"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="123"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.54"
      app:layout_constraintStart_toEndOf="@+id/editWeight"
      app:layout_constraintTop_toBottomOf="@+id/textNumber" />

  <ImageView
      android:id="@+id/imageDetail"
      android:layout_width="350dp"
      android:layout_height="350dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:contentDescription="@string/image_description"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar"
      app:srcCompat="@drawable/foto_05" />

  <TextView
      android:id="@+id/editName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="16dp"
      android:text="@string/name"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageDetail" />

  <TextView
      android:id="@+id/editTextCompany"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/text_company"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editName" />

  <TextView
      android:id="@+id/textAge"
      android:layout_width="37dp"
      android:layout_height="18dp"
      android:layout_marginTop="16dp"
      android:text="@string/age"
      app:layout_constraintEnd_toStartOf="@+id/textWeight"
      app:layout_constraintHorizontal_bias="0.485"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextCompany" />

  <TextView
      android:id="@+id/textWeight"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/weight"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextCompany" />

  <TextView
      android:id="@+id/textNumber"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/number"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/textWeight"
      app:layout_constraintTop_toBottomOf="@+id/editTextCompany" />

  <TextView
      android:id="@+id/editAge"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="21"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toStartOf="@+id/editWeight"
      app:layout_constraintHorizontal_bias="0.414"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textAge" />

  <TextView
      android:id="@+id/editWeight"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="80"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textWeight" />

  <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="72dp"
      android:layout_marginTop="16dp"
      android:text="@string/mail"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editAge" />

  <TextView
      android:id="@+id/textView10"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="64dp"
      android:text="@string/address"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editNumber" />

  <TextView
      android:id="@+id/editMail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="28dp"
      android:layout_marginTop="8dp"
      android:text="mama@gmail.com"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView9" />

  <TextView
      android:id="@+id/editAddress"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="64dp"
      android:text="Calle 11"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView10" />
</androidx.constraintlayout.widget.ConstraintLayout>